--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+*/target
 # Created by https://www.gitignore.io/api/java,intellij+all
 # Edit at https://www.gitignore.io/?templates=java,intellij+all
 
