--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9000
-spring.cloud.config.server.git.uri=${user.home}\\Desktop\\config
+spring.cloud.config.server.git.uri=${SPRING_CLOUD_CONFIG_SERVER_GIT_URI}
 spring.cloud.config.server.git.force-pull=true
